Fixes in p5, slides

--- a/p5/lor_testsys.tex
+++ b/p5/lor_testsys.tex
@@ -486,7 +486,7 @@ $ p_{id} $.
     ~ \hfill a \hfill\hfill b \hfill ~
   \end{center}
   \vspace{-1.5ex}
-  \caption{Процес ідентифікації параметра ``$r$'' системи Лоренца групою методів ql3ruonAAF.$q_{x^2} $ за умови~(\ref{atu:eq:lor_po_t_sign}: динаміка агентів~(a) та $p_\mathrm{id}$~(b)}
+  \caption{Процес ідентифікації параметра ``$r$'' системи Лоренца групою методів ql3ruonAAF.$q_{x^2} $ за умови~(\ref{atu:eq:lor_po_t_sign}): динаміка агентів~(a) та $p_\mathrm{id}$~(b)}
 \label{atu:f:lor_id_ql3ruonAAF.q_x2_sign}
 \end{figure}
 
@@ -588,7 +588,7 @@ $ \overline{e}_{rge} (\omega_p) $ для даної групи методів н
     ~ \hfill a \hfill\hfill b \hfill ~
   \end{center}
   \vspace{-1.5ex}
-  \caption{Залежності $ \overline{e}_{rge} (\omega_p) $ при ідентифікації системи Лоренца групою методів ql3ruonAAF.$q_{x^2} $: динаміка агентів~(a) та $p_\mathrm{id}$~(b)}
+  \caption{Залежності $ \overline{e}_{rge} (\omega_p) $ при ідентифікації системи Лоренца групою методів ql3ruonAAF.$q_{x^2}$: при~(\ref{atu:eq:lor_po_t_sign})~(a) і (\ref{atu:eq:lor_po_t_sin})~(b)}
 \label{atu:f:lor_ql3ruonAAF_e_omega_p}
 \end{figure}
 
@@ -700,7 +700,7 @@ $\overline{e}_{rge}(\omega_p)$ (рис.~\ref{atu:f:lor_Fq3zlovnAAF_e_omega_p}).
     ~ \hfill a \hfill\hfill b \hfill ~
   \end{center}
   \vspace{-1.5ex}
-  \caption{Залежності $ \overline{e}_{rge} (\omega_p) $ при ідентифікації системи Лоренца групою методів Fq3zlovnAAF.$q_{x^2} $: динаміка агентів~(a) та $p_\mathrm{id}$~(b)}
+  \caption{Залежності $ \overline{e}_{rge} (\omega_p) $ при ідентифікації системи Лоренца групою методів Fq3zlovnAAF.$q_{x^2} $: при~(\ref{atu:eq:lor_po_t_sign})~(a) і (\ref{atu:eq:lor_po_t_sin})~(b)}
 \label{atu:f:lor_Fq3zlovnAAF_e_omega_p}
 \end{figure}
 
@@ -858,7 +858,7 @@ $ p_{qe} $.
     ~ \hfill a \hfill\hfill b \hfill ~
   \end{center}
   \vspace{-1.5ex}
-  \caption{Залежності $\overline{e}_{r *} (q_\gamma) $ при ідентифікації системи Лоренца групою методів ql3ruonAAF.$q_{x^2} $ при~(\ref{atu:eq:lor_po_t_sign})~a) і (\ref{atu:eq:lor_po_t_sin})~(b)}
+  \caption{Залежності $\overline{e}_{r *} (q_\gamma) $ при ідентифікації системи Лоренца групою методів ql3ruonAAF.$q_{x^2} $ при~(\ref{atu:eq:lor_po_t_sign})~(a) і (\ref{atu:eq:lor_po_t_sin})~(b)}
 \label{atu:f:lor_qg_ql3ruonAAF.q_x2}
 \end{figure}
 
