--- a/slides/slides_atu.tex
+++ b/slides/slides_atu.tex
@@ -28,7 +28,7 @@
 
 \usepackage{tikz}
 % \usetikzlibrary{tikzmark,calc}
-\usepackage[english,russian]{babel}
+\usepackage[english,ukraineb,russian]{babel}
 \usepackage{bropd} % od, pd
 
 %\usetheme{Warsaw}
@@ -44,9 +44,9 @@
 \input{../tikzsetup.tex}
 \input{defs.tex}
 
-\author{\dissauthorRu}
+\author{\dissauthorUa}
 
-\title[~]{\booknameRu}
+\title[~]{\booknameUa}
 
 \newlength\TW
 \setlength{\TW}{0.01\textwidth} % after geometry!
@@ -81,11 +81,11 @@
 \begin{frame}
   \frametitle{}
   \begin{center}
-    {\Large \color{blue} \booknameRu}
+    {\Large \booknameUa}
 
     \vfill
 
-    {\dissSpecId --- \dissSpecRu}
+    {\dissSpecId --- \dissSpecUa}
 
     \vfill
 
@@ -93,44 +93,46 @@
 
     \vfill
 
-    Научный консультант --- д.т.н., проф. \superRu
+    Науковий консультант --- д.т.н., проф. \superUa
 
     \vfill
 
-    Днепр -- 2018
+    Дніпро --- 2018
   \end{center}
 \end{frame}
 
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{Актуальность}
+  \frametitle{Актуальність}
   %\framesubtitle{}
 
-  Актуальность обусловлена следующими фактами:
+   Актуальність обумовлена наступними фактами:
 
   \begin{itemize}
 
     \item
-      Нелинейные динамические системы, представленные в современных
-      технологических процессах, природных явлениях, зачастую
-      демонстрируют хаотическое поведение.
-      Основная причина -- малые возмущения параметров или входных сигналов
-      приводят к существенным изменениям выходного сигнала.
+      Нелінійні динамічні системи, розповсюджені в сучасних технологічних і
+      природних процесах, незважаючи на детермінізм їх визначення, можуть проявляти
+      хаотичні властивості в своїй динаміці. При цьому як завгодно малі збурення у вхідних
+      впливах і параметрах самої системи призводять до значних, але кінцевих збурень
+      вихідного сигналу. Це призводить до певних труднощів при конструюванні,
+      управлінні і прогнозі поведінки таких систем.
 
     \item
-      Существующие методы идентификации или принципиально непригодны для
-      работы с хаотическими системами, или же требуют выполнения
-      достаточно жёстких условий.
+      Існуючі методи ідентифікації або принципово непридатні для
+      роботи з хаотичними системами, або ж вимагають виконання досить
+      жорстких умов.
 
     \item
-      Существуют динамические системы, не обладающие строгими свойствами хаотичности,
-      но имеющие с ними общие свойства с точки зрения идентификации.
+      Існують динамічні системи, що не володіють строгими
+      властивостями хаотичності, але мають з ними спільні властивості
+      з точки зору ідентифікації.
 
     \item
-      Свойства существующих методов идентификации нелинейных динамических систем
-      ограничивают достижимое качество идентификации,
-      особенно применительно к хаотическим системам.
+      Властивості існуючих методів ідентифікації нелінійних
+      динамічних систем обмежують досяжну якість ідентифікації,
+      особливо стосовно до хаотичних систем.
 
   \end{itemize}
 
@@ -141,28 +143,25 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{Объект, предмет, методы}
+  \frametitle{Об'єкт, предмет, методи дослідження}
   %\framesubtitle{}
 
-\textbf{Объект исследования} ---
-технические системы, которые в процессе функционирования
-могут входить в хаотический режим.
+\textbf{Об'єктом дослідження є}
+технічні системи, які в процесі їх функціювання можуть
+входити в хаотичні режими.
 
-\medskip
+\smallskip
+\textbf{Предметом дослідження є}
+математичні моделі процесів та методи
+ансамблевої ідентифікації технічних систем з хаотичною динамікою.
 
-\textbf{Предмет исследования} ---
-математические модели процессов и методы
-адаптивно-поисковой идентификации параметров технических систем с хаотической динамикой.
+\smallskip
+\textbf{Методи дослідження.}
+Для вирішення поставлених задач використовувався математичний апарат
+теорії управління та ідентифікації нелінійних систем, динамічного хаосу,
+обчислювальних методів, нечіткої логіки, теорії інформації тощо.
 
-\medskip
 
-\textbf{Методы исследования} ---
-математический аппарат теории управления и идентификации,
-динамического хаоса,
-нечёткой логики,
-теории информации,
-вычислительные методы
-\ldots
 
 \end{frame}
 
@@ -171,33 +170,46 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{Задачи исследования}
+  \frametitle{Мета і задачі дослідження}
   %\framesubtitle{}
 
   \begin{itemize}
 
     \item
-      Разработать новые критерии идентификации, которые, в отличие от существующих,
-      при моделировании были бы пригодны для анализа состояния и динамики хаотических
-      систем, что создаст основу для создания работоспособных систем идентификации.
+      розробити нові критерії ідентифікації, які, на відміну від тих, що
+      існують, були б придатні для аналізу стану та динаміки
+      систем з хаотичною динамікою, і створять базис для обґрунтування працездатності систем
+      ідентифікації;
 
     \item
-      Развить существующие и разработать новые методы поиска, которые в полной мере
-      использовали преимущества использования ансамбля поисковых агентов.
+      розвинути існуючі та розробити нові методи пошуку, які б
+      у повної мірі використовували можливості
+      паралельних обчислювань та переваг використання ансамблю
+      синергірованних моделей;
 
     \item
-      Разработать новые и развить существующие и  методы настройки параметров системы
-      идентификации, способные приспособиться к смене режимов работы системы.
+      створити моделі процесів
+      ідентифікації хаотичних систем з використанням запропонованих методів,
+      провести комп'ютерне моделювання процесів ідентифікації систем
+      хаотичної динаміки та дослідити їх працездатність, можливості та
+      характеристики;
 
     \item
-      Разработать программное обеспечение, пригодное для моделирования как систем
-      хаотической динамики, так и систем идентификации.
+      розробити нову фізичну систему з хаотичною поведінкою
+      на підставі системи зв'язаних релаксаційних елементів,
+      що надасть можливість дослідити та підтвердити переваги
+      розроблених методів ідентифікації;
 
     \item
-      Провести компьютерное моделирование процессов идентификации систем хаотической
-      динамики и исследовать их работоспособность, возможности и характеристики.
+      провести натурне моделювання процесів ідентифікації запропонованого
+      генератора хаосу, та порівняти з результатами комп'ютерного моделювання;
 
-  \end{itemize}
+    \item
+      розробити програмне забезпечення, придатне для моделювання систем
+      хаотичної динаміки, систем ідентифікації, предікції та управління.
+
+\end{itemize}
+
 
 \end{frame}
 
@@ -209,44 +221,46 @@
   \frametitle{Исследователи}
   %\framesubtitle{}
 
-  Вопросами идентификации динамических систем занимались
+  Питаннями ідентифікації динамічних систем займалися
   Л.~Заде,
   П.~Эйкхофф,
   Д.~Гропп,
   Л.~Льюнг,
-  Л.А.~Растригин,
-  Я.З.~Цыпкин,
-  Г.Е.~Пухов,
-  Ц.С.~Хатиашвили,
+  Л.А.~Растрігін,
+  Я.З.~Ципкін,
+  Г.Є.~Пухов,
+  Ц.С.~Хатіашвілі,
 
   \vfill
 
 
-  Созданием и разработкой систем поисковой и адаптивно-поисковой идентификации занимались
-  М.М.~Ивахненко,
-  А.А.~Красовский,
+Створенням і розробкою систем пошукової та адаптивно-пошукової ідентифікації займалися
+  М.М.~Івахненко,
+  А.А.~Красовський,
   Н.Н.~Карабутов,
-  А.И.~Михалёв,
-  Э.Е.~Гачинский,
+  А.И.~Михальов,
+  Э.Е.~Гачинський,
   А.И.~Дроздов,
-  Л.Н.~Фицнер,
-  Л.Ф.~Иванов,
+  Л.Н.~Фіцнер,
+  Л.Ф.~Іванов,
 
   \vfill
 
-  Вопросам моделирования систем динамического хаоса, в том числе идентификации уделяли внимание
+Питанням моделювання систем динамічного хаосу, в тому числі
+ідентифікації приділяли увагу
+
   Ф.~Мун,
   M.P.~Kennedy,
   J.C.~Sprott,
-  В.С.~Анищенко,
+  В.С.~Аніщенко,
   В.В.~Астахов,
   Т.Е.~Вадивасова,
   А.Б.~Нейман,
-  Н.А.~Магницкий,
-  А.С.~Дмитриев,
-  Е.В.~Ефремова,
+  Н.А.~Магніцкий,
+  А.С.~Дмитриєв,
+  Е.В.~Єфремова,
   С.П.~Кузнецов,
-  В.Я.~Данилов.
+  В.Я.~Данілов.
 
 
 
@@ -255,32 +269,41 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{Прототипы}
+  \frametitle{Прототипи}
   %\framesubtitle{}
 
   \begin{figure}[h!]
-    \centerline{
-      \includegraphics[width=45\TW]{p/oldsch/sd1.png}
+    \begin{center}
+      ~ \hfill
+      \includegraphics[width=45\TW]{../p1/p/syncdet.pdf}
       \hfill
-      \includegraphics[width=45\TW]{p/oldsch/vsf1.png}
-    }
-    \centerline{
-      {Синхронный детектор}
+      \includegraphics[width=45\TW]{../p1/p/varfreq.pdf}
+      \hfill ~
+    \end{center}
+    \begin{center}
+      ~ \hfill
+      \parbox[t]{48\TW}{\centering Система ідентифікації із синхронним детектором}
       \hfill
-      {С переменной частотой пробного воздействия}
-    }
-    \centerline{
-      \includegraphics[width=45\TW]{p/oldsch/api1.png}
+      \parbox[t]{48\TW}{\centering Система ідентифікації зі змінною частотою пробного впливу}
+      \hfill ~
+    \end{center}
+    %
+    \begin{center}
+      ~ \hfill
+      \includegraphics[width=45\TW]{../p1/p/apid1.pdf}
       \hfill
-      \includegraphics[width=45\TW]{p/oldsch/bimod.png}
-    }
-    \centerline{
-      {Оригинальный адаптивно-поисковый}
+      \includegraphics[width=45\TW]{../p1/p/apid2.pdf}
+      \hfill ~
+    \end{center}
+    \begin{center}
+      ~ \hfill
+      \parbox[t]{48\TW}{\centering Адаптивно-пошукова ідентифікація зі збуренням параметра однієї моделі}
       \hfill
-      {С  двумя моделями и двумя УГПК}
-    }
+      \parbox[t]{48\TW}{\centering Система адаптивно-пошукової ідентифікація з парою моделей і двома генераторами із загальним скиданням}
+      \hfill ~
+    \end{center}
     \label{atu:f:oldsch}
-    \caption{Существующие методы}
+    %\caption{Існуючі методи}
   \end{figure}
 
 
@@ -300,34 +323,51 @@
 % ----------------------------- FINAL ------------------------------------------
 
 \begin{frame}
-  \frametitle{Научная новизна}
+  \frametitle{Наукова новизна}
   %\framesubtitle{}
 
   \noindent
-  Впервые:
-
+  Вперше:
+  %
   \begin{itemize}
 
     \item
-      Предложены \textbf{критерии} идентификации нелинейных динамических систем, которые, в
-      отличие от существующих, позволяют оценить их состояние и хаотическую динамику,
-      и дают основания для создания эффективных алгоритмов настройки параметров
-      моделей систем идентификации.
+      створено критерії ідентифікації нелінійних динамічних систем,
+      які, на відміну від тих, що існують, дозволяють оцінити їх стан та
+      хаотичну динаміку, а також дають підстави для створення ефективних алгоритмів
+      настроювання параметрів моделей систем ідентифікації;
 
     \item
-      Созданы \textbf{методы} адаптивно-поисковой идентификации на основании
-      адаптивно-поисковой парадигмы с использованием \textbf{ансамбля взаимодействующих поисковых агентов},
-      и, в отличие от методов, которые
-      используют одну модель или пару моделей, значительно повышают скорость поиска и
-      способны за минимальное время перестраиваться при резкой смене параметра, а в
-      отличие от роевых алгоритмов, новые методы требуют значительно меньшего
-      количества моделей и обеспечивают определённые гарантии поиска.
+      створено методи ідентифікації на підставі
+      адаптивно-пошукової парадигми з використанням ансамблю пошукових агентів,
+      які взаємодіють проміж собою, які на відміну від методів, що використовують
+      одну модель або пару моделей, значно підвищують швидкість пошуку та
+      здатні за мінімальний час  перелаштовуватися при різкій зміні параметрів, а на
+      відміну від ройових алгоритмів нові методи потребують значно меншої
+      кількості моделей та забезпечують певні гарантії пошуку;
 
     \item
-      Создана новая \textbf{классификация} систем идентификации динамических систем, которая
-      как включает в себя как существующие методы, так и позволяет создавать новые методы
-      идентификации за счет комбинирования их составных частей.
+      створено нову класифікацію систем ідентифікації динамічних систем,
+      яка, як вбирає у себе методи, що існують, так і дозволяє
+      створювати нові методи ідентифікації за рахунок
+      комбінування їх складових частин;
 
+    \item
+      визначено, що системи з сухим тертям з точки зору задачі ідентифікації
+      при певних  умовах функціонування
+      мають властивості, що поєднують їх з системами хаотичної динаміки, тобто існує
+      суттєва залежність від початкових
+      умов та характерний вид атрактору;
+
+    \item
+      запропоновано модель системи хаотичної динаміки
+      з використанням зв'язаних релаксаційних генераторів,
+      яка відрізняється від існуючих відсутністю індуктивних компонентів,
+      працездатністю при малих напругах та можливістю
+      керування частотним діапазоном у широкому інтервалі,
+      що сприяє процесу аналізу хаотичної динаміки
+      фізичного об'єкту, перевірці адекватності математичної моделі
+      та властивостей системи ідентифікації.
   \end{itemize}
 
 
@@ -339,64 +379,49 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{Научная новизна (2)}
-  %\framesubtitle{}
-
-  \begin{itemize}
-
-    \item
-      Установлено, что системы с \textbf{сухим трением} с точки зрения задачи идентификации при
-      определенных условиях функционирования обладают свойствами, которые объединяют их с
-      системами хаотической динамики, а именно:
-      существенная зависимость от начальных условий и вид аттракторов, что
-      также требует использования новых методов идентификации.
-
-    \item
-      Предложена модель системы хаотической динамики системы
-      \textbf{связанных релаксационных генераторов},
-      которая отличаешься от существующих отсутствием индуктивных
-      компонентов, работоспособностью при малых напряжениях и возможностью управления
-      частотным диапазоном в широком диапазоне, что способствует процессу анализа
-      хаотической динамики физического объекта, проверки адекватности математической
-      модели и свойств системы идентификации на этой системе.
-
-  \end{itemize}
-
-\end{frame}
-
-
-
-% -----------------------------------------------------------------------
-
-\begin{frame}
-  \frametitle{Научная новизна (3)}
+  \frametitle{Наукова новизна (2)}
   %\framesubtitle{}
 
 \noindent
-Получили дальнейшее развитие:
+Набуло подальший розвиток:
+\begin{itemize}
 
-  \begin{itemize}
+  \item
+  методи оцінювання якості ідентифікації,
+  які на відміну від тих, що існують,
+  враховують використання множини агентів;
 
-    \item
-      \textbf{Методы оценки качества идентификации},
-      которые в отличие от существующих,
-      учитывают использование множества агентов.
+  \item
+  підходи до адаптації параметрів систем
+  ансамблевої ідентифікації, які придатні використовувати поточну
+  інформацію від ансамблю синергірованих моделей та коригувати глобальні
+  параметри пошуку в умовах апріорної та поточної невизначеності;
 
-    \item
-      \textbf{Подходы к адаптации параметров}
-      систем адаптивно-поисковой идентификации,
-      которые пригодны использовать информацию от ансамбля синергированих моделей, и
-      корректировать глобальные параметры поиска.
+  \item
+    модель генератора Колпітца, яка враховує
+    більшу кількість нелінійних ефектів,
+    що забезпечує більш адекватні результати процесу
+    ідентифікації її параметрів запропонованими методами;
 
-    \item
-      Модель \textbf{генератора Колпитца}, учитывающей большее количество нелинейных эффектов,
-      что обеспечивает более адекватные результаты процесса идентификации ее
-      параметров новыми методами.
+\end{itemize}
 
-  \end{itemize}
+\textbf{Практичне значення одержаних результатів.}
+Розроблені методи ідентифікації було використано
+при проектуванні, створенні, налаштовуванні параметрів
+стенду дослідження вібраційного та акустичного впливу.
+Аналіз результатів даних з цього стенду
+дав можливість вказати необхідні нелінійні властивості системи
+та діапазон параметрів, які у сукупності
+забезпечують широкосмуговий спектр коливань.
 
+Створене програмне середовище для моделювання нелінійних динамічних систем
+використовується при проведенні практичних робіт по дисциплінам
+``Моделювання систем'',
+``Сучасні системи управління'' на кафедрі інформаційних технологій
+і систем Національної металургійної академії України.
 
 \end{frame}
+
 
 
 
@@ -436,14 +461,16 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{Печатные работы и апробация}
+  \frametitle{Друковані роботи та апробація}
   %\framesubtitle{}
 
-По теме диссертации опубликовано
-49 печатных работ,
-из них
-24 входят в международные наукометрические базы,
-13 статей опубликовано в материалах конференций.
+За темою дисертаційної роботи опубліковано
+50 наукових праць. Основний зміст і результати досліджень
+викладено у 36 друкованих працях у наукових фахових виданнях, які
+рекомендовано Міністерством освіти і науки України,
+29 --- включено до інших міжнародних наукометричних баз,
+у тому числі 1 --- включено до бази Web of Science,
+13 робіт опубліковано у збірниках наукових праць та матеріалах конференцій.
 
 {\scriptsize
 Основные положения диссертационной работы докладывались на
@@ -471,46 +498,50 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{Выводы}
+  \frametitle{Висновки}
   %\framesubtitle{}
 
-  \begin{itemize}
+У роботі вирішена науково-технічна проблема ідентифікації параметрів складних технічних
+систем у режимі хаотичної динаміки
+з метою забезпечення їх керованої поведінки. При цьому:
 
-    \item[---]
-      Созданы новые критерии идентификации,
-      пригодные для анализа состояния и динамики хаотических систем, что создаёт
-      физическое  обоснование для создания работоспособных систем идентификации.
+\begin{itemize}
 
-    \item
-      Создан новый класс систем идентификации в рамках адаптивно-поисковом парадигмы,
-      которые за счет использования коллективной динамики ансамбля поисковых
-      агентов обеспечивают лучшее качество идентификации.
+  \item
+    створено нові критерії ідентифікації, які, на відміну від тих, що
+    існують, придатні для аналізу стану та динаміки
+    хаотичних систем, що створило фізично зумовлене обґрунтування працездатності систем
+    ідентифікації;
 
-    \item
-      Создано программное обеспечение, пригодное для моделирования как систем
-      хаотической динамики, так и систем мультиагентной идентификации.
+  \item
+    створено новий клас систем ідентифікації у межах
+    адаптивно-пошуковой парадигми,
+    які, за рахунок використання колективної динаміки
+    ансамблю пошукових агентів, забезпечують
+    кращу швидкість ідентифікації без істотного впливу на похибку ідентифікації;
 
-    \item
-      Проведено компьютерное моделирование процессов идентификации систем хаотической
-      динамики, подтверждена их работоспособность.
+  \item
+    проведена перевірка працездатності запропонованих методів
+    на прикладах як відомих систем хаотичної динаміки,
+    так і на прикладах декількох інших динамічних систем (модельних та фізичних),
+    які проявляють складну та хаотичну динаміку;
 
-  \end{itemize}
+  \item
+   визначено, що системи з сухим тертям з точки зору задачі ідентифікації
+   при певних  умовах функціонування
+   мають властивості, що поєднують їх з системами хаотичної динаміки;
 
-  \begin{example}
-    exa
-  \end{example}
+ \item
+  створено програмне забезпечення, придатне для моделювання як систем
+  хаотичної динаміки, так і систем мультиагентної ідентифікації;
 
-
-  \begin{alertblock}{alert}
-    alert1
-  \end{alertblock}
-
-
-  \begin{block}{Block}
-    Block1
-  \end{block}
+  \item
+  проведено як комп'ютерне моделювання процесів ідентифікації систем
+  хаотичної динаміки, так і фізичне моделювання таких, що підтверджує адекватність
+  побудованих моделей.
 
 
+\end{itemize}
 
 \end{frame}
 
