Pic fixes in p3

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -160,12 +160,8 @@ $\mu(x_o(t), x_i(t))$ у просторі вихідних
 $x_0$ становить~$1 \times 10^{-8}$.
 
 \begin{figure}[htb!]
-  \begin{center}
-    \includegraphics[width=0.49\textwidth]{p/lor_diff-p_xx_x0.png}
-    \hfill
-    \includegraphics[width=0.49\textwidth]{p/lor_diff-p_dx_x0.png}
-  \end{center}
-\caption{Різниця в поведінку системи Лоренца при малому збуренні початкових умов}
+  \PicDouble{p/lor_diff-p_xx_x0.png}{p/lor_diff-p_dx_x0.png}
+  \caption{Різниця в поведінку системи Лоренца при малому збуренні початкових умов: сигнали~(a) та різниця~(b)}
 \label{atu:f:lor_diff_x0}
 \end{figure}
 
@@ -173,15 +169,11 @@ $x_0$ становить~$1 \times 10^{-8}$.
 На рис.~\ref{atu:f:lor_diff_sigma} наведено приклад, що показує відмінність
 траєкторій для системи Лоренца при малому збуренні значень
 параметра
-$ \sigma $, що становить в відносних одиницях~$ 1 \times 10^{-9} $.
+$\sigma$, що становить в відносних одиницях~$ 1 \times 10^{-9} $.
 
 \begin{figure}[htb!]
-  \begin{center}
-    \includegraphics[width=0.49\textwidth]{p/lor_diff-p_xx_sigma.png}
-    \hfill
-    \includegraphics[width=0.49\textwidth]{p/lor_diff-p_dx_sigma.png}
-  \end{center}
-  \caption{Різниця в поведінку системи Лоренца при малому збуренні параметра $ \sigma $}
+  \PicDouble{p/lor_diff-p_xx_sigma.png}{p/lor_diff-p_dx_sigma.png}
+  \caption{Різниця в поведінку системи Лоренца при малому збуренні параметра $ \sigma $: сигнали~(a) та різниця~(b)}
   \label{atu:f:lor_diff_sigma}
 \end{figure}
 
