More pics in slides

--- a/slides/slides_atu.tex
+++ b/slides/slides_atu.tex
@@ -2,7 +2,7 @@
 %\setlength{\paperwidth}{297mm}
 %\setlength{\paperheight}{210mm}
 %\usepackage[scale=0.78,size=a1]{beamerposter}
-\usepackage[scale=1.0,size=a4]{beamerposter}
+\usepackage[scale=1.0,size=a4,orientation=portrait]{beamerposter}
 %\setlength{\topmargin}{20mm}
 \setbeamersize{text margin left=15mm,text margin right=15mm}
 
@@ -54,11 +54,69 @@
 \setlength{\DDW}{0.36\textwidth}
 \newlength\DDT
 \setlength{\DDT}{0.32\textwidth}
+\newlength\DDP
+\setlength{\DDP}{0.48\textwidth}
+
+\newcommand{\Tidx}[1]{%
+  _\mathrm{#1}
+}
+\newcommand{\Xhead}[1]{
+ \begin{center}%
+      \textbf{#1}%
+ \end{center}%
+}
+
+% pics
+\newcommand{\ABlbl}{%
+  \vspace{-2.2ex}
+  \begin{center}
+    ~ \hfill a \hfill\hfill b \hfill ~
+  \end{center}
+  \vspace{-1.0ex}
+}
+\newcommand{\ABClbl}{%
+  \vspace{-2.2ex}
+  \begin{center}
+    ~ \hfill a \hfill\hfill b \hfill\hfill c \hfill ~
+  \end{center}
+  \vspace{-1.0ex}
+}
+\newcommand{\PicDouble}[2]{%
+ \begin{center}
+    ~ \hfill
+    \includegraphics[width=\DDP]{#1}
+    \hfill
+    \includegraphics[width=\DDP]{#2}
+    \hfill ~
+  \end{center}
+  \ABlbl
+}
+\newcommand{\PicTriple}[3]{%
+ \begin{center}
+    ~ \hfill
+    \includegraphics[width=\DDT]{#1}
+    \hfill
+    \includegraphics[width=\DDT]{#2}
+    \hfill
+    \includegraphics[width=\DDT]{#3}
+    \hfill ~
+  \end{center}
+  \ABClbl
+}
+\newcommand{\TextDouble}[2]{%
+ \begin{center}
+    ~ \hfill
+    \parbox[t]{\DDP}{#1}
+    \hfill
+    \parbox[t]{\DDP}{#2}
+    \hfill ~
+  \end{center}
+}
 
 \makeatletter
 \setbeamertemplate{frametitle}{
-    \vspace{6mm} \leavevmode
-    \hfill \insertframetitle \hfill~
+    \vspace{2mm}% \leavevmode
+    % \hfill \insertframetitle \hfill~
 }
 \setbeamertemplate{footline}{%
   \leavevmode%
@@ -74,6 +132,8 @@
 }
 \makeatother
 
+\newcommand{\RelaxBjtIi}{системи з трьох пов'язаних релаксаційних генераторів на парі компліментарних транзисторів}
+\newcommand{\RelaxShIi}{системи з трьох пов'язаних релаксаційних генераторів на основі тригерів Шмідта}
 % -----------------------------------------------------------------------
 % -----------------------------------------------------------------------
 \begin{document}
@@ -98,7 +158,25 @@
     \vfill
 
     Дніпро --- 2018
+
   \end{center}
+
+  \vfill
+
+\textbf{Об'єктом дослідження є}
+технічні системи, які в процесі їх функціювання можуть
+входити в хаотичні режими.
+
+\smallskip
+\textbf{Предметом дослідження є}
+математичні моделі процесів та методи
+ансамблевої ідентифікації технічних систем з хаотичною динамікою.
+
+\smallskip
+\textbf{Методи дослідження.}
+Для вирішення поставлених задач використовувався математичний апарат
+теорії управління та ідентифікації нелінійних систем, динамічного хаосу,
+обчислювальних методів, нечіткої логіки, теорії інформації тощо.
 \end{frame}
 
 % -----------------------------------------------------------------------
@@ -107,7 +185,9 @@
   \frametitle{Актуальність}
   %\framesubtitle{}
 
-   Актуальність обумовлена наступними фактами:
+  \Xhead{Актуальність}
+
+   Актуальність обумовлена:
 
   \begin{itemize}
 
@@ -146,21 +226,6 @@
   \frametitle{Об'єкт, предмет, методи дослідження}
   %\framesubtitle{}
 
-\textbf{Об'єктом дослідження є}
-технічні системи, які в процесі їх функціювання можуть
-входити в хаотичні режими.
-
-\smallskip
-\textbf{Предметом дослідження є}
-математичні моделі процесів та методи
-ансамблевої ідентифікації технічних систем з хаотичною динамікою.
-
-\smallskip
-\textbf{Методи дослідження.}
-Для вирішення поставлених задач використовувався математичний апарат
-теорії управління та ідентифікації нелінійних систем, динамічного хаосу,
-обчислювальних методів, нечіткої логіки, теорії інформації тощо.
-
 
 
 \end{frame}
@@ -173,6 +238,11 @@
   \frametitle{Мета і задачі дослідження}
   %\framesubtitle{}
 
+\textbf{Мета:} створення нових методів ідентифікації з
+використанням адаптивно-пошукових принципів настроювання параметрів, які
+були б придатні для створення моделей систем, які проявляють хаотичну динаміку.
+
+\textbf{Задачі дослідження:}
   \begin{itemize}
 
     \item
@@ -266,6 +336,7 @@
 
 \end{frame}
 
+
 % -----------------------------------------------------------------------
 
 \begin{frame}
@@ -317,8 +388,148 @@
 
 
 
+% -------------------------- P1 ---------------------------------------------
+
+
+
 % -------------------------- P2 ---------------------------------------------
 
+
+% -------------------------- P3 ---------------------------------------------
+
+
+% -------------------------- P4 ---------------------------------------------
+
+
+% -------------------------- P5 ---------------------------------------------
+
+
+% -------------------------- P6 ---------------------------------------------
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{}
+  %\framesubtitle{}
+  \Xhead{Моделювання та ідентифікація фізичної системи пов'язаних релаксаційних генераторів}
+
+  \centerline{\includegraphics[width=0.8\textwidth]{../p7/p/relax_types.png} }
+  {Умовні схеми релаксаційних генераторів}
+
+\begin{equation}
+  C \od{V_c}{t}
+  =
+  \frac{V\Tidx{cc} - V\Tidx{c}}{R\Tidx{ch}}
+  - \frac{V\Tidx{c}}{R\Tidx{dis}} \cdot \mathrm{On}().
+  \label{atu:eq:relax0}
+\end{equation}
+
+  \centerline{\includegraphics[width=0.96\textwidth]{../p7/p/relax3d_schem.png} }
+  {Електрична схема \RelaxBjtIi}
+
+
+\end{frame}
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{}
+  %\framesubtitle{}
+
+  \Xhead{}
+
+  \PicDouble{../p7/p/relax3d_f_02.png}{../p7/p/relax3d_v1v2v3_02.png}
+  Спектр $V_b(t)$~(a), і аттрактор~(b) для системи ``relax3d'' при $R_b = \SI{5.0}{\kilo \ohm} $
+
+  \PicDouble{../p7/p/relax3d_f_08.png}{../p7/p/relax3d_v1v2v3_08.png}
+  Спектр $V_b(t)$~(a), і аттрактор~(b) для системи ``relax3d'' при $ R_b = \SI{34.0}{\kilo\ohm} $
+
+\end{frame}
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{}
+  %\framesubtitle{}
+
+  \Xhead{Модель систем з трьох пов'язаних релаксаційних генераторів}
+
+  \begin{equation}
+  \begin{cases}
+    V_b = V_{cc} - R_b ( I_1 + I_2 + I_3 ), \\
+      C_1 \dot{V}_1 = \frac{V_b-V_1}{R_{v1}} - \frac{V_1}{R_1} \mathrm{On}_1() - I_{1,\mathrm{leak}}(V_1), \\
+      C_2 \dot{V}_2 = \frac{V_b-V_2}{R_{v2}} - \frac{V_2}{R_2} \mathrm{On}_2() - I_{2,\mathrm{leak}}(V_2), \\
+      C_3 \dot{V}_3 = \frac{V_b-V_3}{R_{v3}} - \frac{V_3}{R_3} \mathrm{On}_3() - I_{3,\mathrm{leak}}(V_3), \\
+      I_i = \frac{V_b-V_i}{R_{vi}}.
+  \end{cases}.
+    \label{atu:eq:relax3}
+\end{equation}
+%
+де: \\
+$R_b $ --- опір в ланцюзі живлення (ідентифікований параметр),
+$C_i $ --- ємності кожного з релаксаційних генераторів,
+$R_{vi} $ --- опори зарядки релаксаційних генераторів,
+$R_{ i} $ --- опори зарядки релаксаційних генераторів,
+$I_{i, \mathrm{leak}} $ --- струми витоку.
+
+
+\end{frame}
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{}
+  %\framesubtitle{}
+
+  \Xhead{Критерії ідентифікації для системи ``relax3d''}
+
+\begin{equation}
+  q_{sv} = \overline{V_1+V_2+V_3} .
+  \label{atu:eq:q_sv_relax}
+\end{equation}
+%
+\begin{equation}
+  q_{vb} = \overline{V_b} .
+  \label{atu:eq:q_vb_relax}
+\end{equation}
+%
+\begin{equation}
+  q_{hv} = \frac{1}{\overline{V_b}} .
+  \label{atu:eq:q_hb_relax}
+\end{equation}
+%
+\begin{equation}
+  q_{rv} = \frac{\overline{V_1+V_2+V_3}}{\overline{V_b}}.
+  \label{atu:eq:q_rv_relax}
+\end{equation}
+
+  \centerline{\includegraphics[width=0.7\textwidth]{../p7/p/relax3d_read_q-p_q1.png} }
+  {Залежності для розглянутих критеріїв ідентифікації для системи релаксаційних генераторів на парі компліментарних транзисторів}
+
+
+\end{frame}
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{}
+  %\framesubtitle{}
+
+  \Xhead{}
+
+  \PicDouble{../p7/p/relax3ds_read_id2_0-p_p.png}{../p7/p/relax3ds_read_id2_0-p_pp.png}
+  {Процес ідентифікації системи ``relax3ds'' групют методів ``Fq3zlovnAAF'': динаміка агентів~(a) та $p_\mathrm{id}$~(b)}
+
+  \PicDouble{../p7/p/relax3ds_read_id2_prm_0-p_a_q.png}{../p7/p/relax3ds_read_id2_prm_0-p_q_gamma.png}
+  \TextDouble{Залежності $\overline{e}_{r *}(a_q)$ при ідентифікації системи ``relax3ds''}{Залежності $ \overline{e}_{r *} (q_\gamma) $ при ідентифікації системи ``relax3ds''}
+
+
+\end{frame}
 
 % ----------------------------- FINAL ------------------------------------------
 
@@ -326,8 +537,10 @@
   \frametitle{Наукова новизна}
   %\framesubtitle{}
 
+  \Xhead{Наукова новизна}
+
   \noindent
-  Вперше:
+  \textbf{Вперше:}
   %
   \begin{itemize}
 
@@ -379,31 +592,31 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{Наукова новизна (2)}
+  \frametitle{Практическая ценность}
   %\framesubtitle{}
 
-\noindent
-Набуло подальший розвиток:
-\begin{itemize}
+  \noindent
+  \textbf{ Набуло подальший розвиток:}
+  \begin{itemize}
 
-  \item
-  методи оцінювання якості ідентифікації,
-  які на відміну від тих, що існують,
-  враховують використання множини агентів;
+    \item
+      методи оцінювання якості ідентифікації,
+      які на відміну від тих, що існують,
+      враховують використання множини агентів;
 
-  \item
-  підходи до адаптації параметрів систем
-  ансамблевої ідентифікації, які придатні використовувати поточну
-  інформацію від ансамблю синергірованих моделей та коригувати глобальні
-  параметри пошуку в умовах апріорної та поточної невизначеності;
+    \item
+      підходи до адаптації параметрів систем
+      ансамблевої ідентифікації, які придатні використовувати поточну
+      інформацію від ансамблю синергірованих моделей та коригувати глобальні
+      параметри пошуку в умовах апріорної та поточної невизначеності;
 
-  \item
-    модель генератора Колпітца, яка враховує
-    більшу кількість нелінійних ефектів,
-    що забезпечує більш адекватні результати процесу
-    ідентифікації її параметрів запропонованими методами;
+    \item
+      модель генератора Колпітца, яка враховує
+      більшу кількість нелінійних ефектів,
+      що забезпечує більш адекватні результати процесу
+      ідентифікації її параметрів запропонованими методами;
+  \end{itemize}
 
-\end{itemize}
 
 \textbf{Практичне значення одержаних результатів.}
 Розроблені методи ідентифікації було використано
@@ -428,30 +641,10 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{Практическая ценность}
+  \frametitle{}
   %\framesubtitle{}
 
-  \begin{itemize}
-
-    \item
-      Разработанные методы идентификации были использованы при проектировании,
-      создании, настройке параметров стенда исследования вибрационного и
-      акустического воздействия. Анализ результатов данных по этому стенду дал
-      возможность указать нужные нелинейные свойства системы, и диапазон параметров,
-      в совокупности обеспечивают широкополосный спектр колебаний.
-
-      Науково-практичного дослідження
-      ``Оцінка    можливості заміни випробувань КА на стійкість до акустичного навантаження
-      випробуваннями широкосмугової вібрації'', згідно договору №~V-105-16-3 від 07.09.2016.
-
-    \item
-      Созданное программное среда для моделирования нелинейных динамических систем
-      используется при проведении практических работ по дисциплинам
-      ``Моделирование систем'', ``Современные системы управления''
-      на кафедре информационных технологий
-      и систем Национальной металлургической академии Украины.
-
-  \end{itemize}
+  \Xhead{}
 
 
 \end{frame}
@@ -500,6 +693,8 @@
 \begin{frame}
   \frametitle{Висновки}
   %\framesubtitle{}
+
+  \Xhead{Висновки}
 
 У роботі вирішена науково-технічна проблема ідентифікації параметрів складних технічних
 систем у режимі хаотичної динаміки
